[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boomerang-client"
version = "0.1.0"
description = "Python SDK for the Boomerang async webhook platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
fastapi = ["fastapi>=0.100"]
flask = ["flask>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "fastapi>=0.100",
    "flask>=2.0",
    "httpx>=0.27,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/boomerang"]

[tool.pytest.ini_options]
testpaths = ["tests"]
